# klein4b_lora_training

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
configs/: ai_toolkit.lock.json  train_flux2_klein9b_marble_bust_v7_30_rank64_unquantized.template.yaml  train_flux2_klein9b_marble_bust_v7_60_no_statue_ref_rank64_unquantized.template.yaml  train_flux2_klein9b_marble_bust_v7_60_with_statue_ref_rank64_unquantized.template.yaml  train_flux2_klein_makeup_demo.template.yaml  train_flux2_klein_marble_bust.template.yaml  train_flux2_klein_marble_bust_v3_matte_lava.template.yaml  train_flux2_klein_marble_bust_v4_manual_weathered_face.template.yaml  train_flux2_klein_marble_bust_v4_pairs_rich_result_caption_rank64_unquantized.template.yaml  train_flux2_klein_marble_bust_v5_clothing_armor_rank64_unquantized.template.yaml  train_flux2_klein_marble_bust_v6_199_rank96_unquantized.template.yaml
docs/: sagemaker_inference_handoff.md
sagemaker/: inference.py
scripts/: bootstrap_ai_toolkit.sh  bootstrap_demo_dataset.py  check_cuda.py  compare_before_after.py  download_scrfd_model.py  eval_marble_model_baselines.py  eval_marble_v4_checkpoint_sweep.py  generate_gpt_image2_fal_examples.py  generate_wearable_synthetic_examples.py  prepare_fal_training_package.py  prepare_marble_v2_dataset.py  prepare_marble_v3_dataset.py  prepare_marble_v6_199_dataset.py  run_inference.py  run_sagemaker_marble_inference_local.py  run_structured_marble_inference.py  setup_local_env.sh  train_lora.py
tests/: test_ai_toolkit.py  test_demo_dataset.py  test_eval_metrics.py  (+18 more)
(+77 files in other folders)
